apps/vscode-server/vscode-gorttman-stripprefix-middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: vscode-gorttman-strip
  namespace: vscode-server
  labels:
    app: vscode-gorttman
    argocd.argoproj.io/managed-by: argocd
spec:
  stripPrefix:
    prefixes:
      - /gorttman
