apps/vscode-server/vscode-server-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: vscode-server
  labels:
    app.kubernetes.io/part-of: day2-services
    argocd.argoproj.io/managed-by: argocd
