apps/vscode-server/vscode-gorttman-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vscode-gorttman
  namespace: vscode-server
  labels:
    app: vscode-gorttman
    app.kubernetes.io/name: vscode-server
    argocd.argoproj.io/managed-by: argocd
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: vscode-gorttman
