apps/vscode-server/vscode-server-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vscode-server
  namespace: vscode-server
  labels:
    app: vscode-server
    app.kubernetes.io/name: vscode-server
    argocd.argoproj.io/managed-by: argocd
  annotations:
    cert-manager.io/cluster-issuer: "private-ca"
    traefik.ingress.kubernetes.io/router.middlewares: vscode-server-vscode-gorttman-trailing-slash@kubernetescrd,vscode-server-vscode-gorttman-auth@kubernetescrd,vscode-server-vscode-gorttman-strip@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - vscode.i3sec.com.au
    secretName: vscode-server-tls
  rules:
  - host: vscode.i3sec.com.au
    http:
      paths:
      - path: /gorttman
        pathType: Prefix
        backend:
          service:
            name: vscode-gorttman
            port:
              number: 80
